# rust-rest

./: Cargo.toml  Dockerfile  Rocket.toml
kustomize/: is.yaml  kustomization.yaml  pipeline.yaml  pipelinerun.yaml  rbac.yaml  tasks.yaml  triggers.yaml
kustomize/base/: deployment.yaml  kustomization.yaml
kustomize/dev/: deployment-patch.yaml  kustomization.yaml  ns.yaml
kustomize/prod/: deployment-patch.yaml  kustomization.yaml  ns.yaml
kustomize/test/: kustomization.yaml
src/: main.rs  tests.rs
templates/: list.tera
