[package]
name = "rust-rest"
version = "0.1.0"
authors = ["Petter Abrahamsson <pabraham@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.8"
okapi = "0.4"
rocket = "0.4"
rocket_okapi = "0.4"
rocket_prometheus = "0.4"
schemars = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]
